# Python-Template

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: main.yml
src/: Makefile  pyproject.toml
src/app/: main.py
src/app/core/: config.py
